2004-10-06  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/sock.lisp (open-unix-socket-stream): add
	&ALLOW-OTHER-KEYS to the lambda list; REMOVE-PLIST is non-destructive
	Reported by Jörg Höhle

2004-10-06  Jörg Höhle  <hoehle@users.sourceforge.net>

	* foreign1.lisp (parse-c-type compiler-macro): leave
	(parse-c-type `(c-array ,foo ,len)) unchanged

2004-10-05  Sam Steingold  <sds@gnu.org>

	The user commands can now be extended using CUSTOM:*USER-COMMANDS*
	* reploop.lisp (*user-commands*): new user variable
	(wrap-user-commands): new function
	(commands0, commands): activate user commands

2004-10-05  Sam Steingold  <sds@gnu.org>

	* constobj.d (type_foreign_variable, type_foreign_function):
	new constants
	* foreign.d (FOREIGN-VARIABLE, FOREIGN-FUNCTION): use them instead
	of the illegal form pushSTACK(listof(3))
	(FOREIGN-FUNCTION): made argument type check restartable

2004-10-05  Jörg Höhle  <hoehle@users.sourceforge.net>

	* foreign.d (FOREIGN-VARIABLE, FOREIGN-FUNCTION):
	new constructor functions.
	* subr.d, subrkw.d: add them

2004-10-05  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (unused): do not redefine (win32.d already defines it)

2004-10-05  Sam Steingold  <sds@gnu.org>

	* pathname.d (LAUNCH): exit_code is unsigned,
	so use fixnum() instead of sfixnum() and avoid a GCC warning

2004-10-05  Sam Steingold  <sds@gnu.org>

	* init.lisp: export ABSOLUTE-PATHNAME

2004-10-05  Sam Steingold  <sds@gnu.org>

	* pathname.d (ABSOLUTE-PATHNAME, physical_namestring):
	do not call check_no_wildcards()
	(use_default_dir) [PATHNAME_WIN32]: check that the :DEVICE is not :WILD

2004-10-05  Sam Steingold  <sds@gnu.org>

	* encoding.d (CONVERT-STRING-FROM-BYTES, CONVERT-STRING-TO-BYTES):
	check_encoding() can trigger GC
	Reported by Jörg Höhle

2004-10-05  Jörg Höhle  <hoehle@users.sourceforge.net>

	* foreign.d (fehler_foreign_variable, fehler_foreign_function):
	raise error of type type-error

2004-10-04  Sam Steingold  <sds@gnu.org>
