@@ -1,3 +1,10 @@
+2004-10-06  Bruno Haible  <bruno@clisp.org>
+
+	* control.d (MULTIPLE-VALUE-SETQ): Rewritten, to fix three bugs
+	introduced since 2003-05-20: GC-safety bug when assigning Car(STACK_0),
+	side effect on variable list given in the original form, GC-safety bug
+	on return value.
+
 2004-10-06  Sam Steingold  <sds@gnu.org>
 
 	* modules/rawsock/sock.lisp (open-unix-socket-stream): add
